# assetinfo

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  THIRDPARTY.toml  THIRDPARTY.toml.license  build.rs  cliff.toml  deny.toml
.github/workflows/: rust.yml
db/: .gitignore  README.md  REUSE.toml  justfile
db/json-v0/: json-v0.schema.json
db/json-v0/data/: com.ansible.ansible-community.json  com.ansible.ansible-core.json  com.docker.json  com.mattermost.json  com.ubuntu.json  net.php.json  org.apache.httpd.json  org.debian.json  org.freedesktop.systemd.json  org.grocy.json  org.kernel.linux.json  org.mariadb.json  org.mozilla.firefox.json  org.nginx.json  org.postgresql.json  org.python.json
src/: about.rs  config.rs  db.rs  extractor.rs  hash_database.rs  lib.rs  main.rs  program.rs  providers.rs  scan.rs  sources.rs  table_view.rs
src/extractor/: binary.rs  docker.rs  regex.rs
src/providers/: endoflife_date.rs
src/sources/: binary.rs  docker.rs  regex.rs
tests/: test_scan_directory.rs  test_update_database.rs
