# SPDX-FileCopyrightText: 2024 Benedikt Bastin
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "assetinfo"
version = "0.6.2"
authors = ["Benedikt Bastin"]
edition = "2021"
description = "assetinfo is a tool to watch for versions of assets and their end-of-life date."
readme = true
homepage = "https://assetinfo.de"
repository = "https://github.com/bbastin/assetinfo"
license = "AGPL-3.0-or-later"
keywords = ["cli", "security"]
categories = ["command-line-utilities"]

[dependencies]
async-compression = { version = "0.4.12", features = ["tokio", "zstd"] }
bollard = "0.17.0"
chrono = { version = "0.4.38", features = ["now", "serde"] }
clap = { version = "4.5.11", features = ["derive"] }
log = "0.4.22"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
sha256 = "1.5.0"
simple_logger = "5.0.0"
tar = "0.4.41"
tokio = { version = "1.39.2", features = ["full"] }

[dev-dependencies]
tempfile = "3.10.1"
