# SPDX-FileCopyrightText: 2024 Benedikt Bastin
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "assetinfo"
version = "0.10.1"
authors = ["Benedikt Bastin"]
edition = "2021"
description = "assetinfo is a tool to watch for versions of assets and their end-of-life date."
readme = true
homepage = "https://assetinfo.de"
repository = "https://github.com/bbastin/assetinfo"
license = "AGPL-3.0-or-later"
keywords = ["cli", "security"]
categories = ["command-line-utilities"]
exclude = [".github", "cliff.toml", ]

[dependencies]
async-compression = { version = "0.4.12", features = ["tokio", "zstd"] }
bollard = "0.17.0"
chrono = { version = "0.4.38", features = ["now", "serde"] }
clap = { version = "4.5.11", features = ["derive"] }
log = "0.4.22"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
sha256 = "1.5.0"
simple_logger = "5.0.0"
tabled = "0.15.0"
tar = "0.4.41"
tokio = { version = "1.39.2", features = ["full"] }
tokio-stream = "0.1.15"

[dev-dependencies]
tempfile = "3.10.1"

[lints.rust]
missing_copy_implementations = "warn"
missing_debug_implementations = "allow"
missing_docs = "allow"
non_ascii_idents = "deny"
non_local_definitions = "deny"
unit_bindings = "deny"
unsafe_code = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"

[lints.clippy]
cargo={ level = "deny", priority = -1 }
multiple_crate_versions="allow"

complexity={ level = "warn", priority = -1 }

pedantic={ level = "deny", priority = -1 }
missing_errors_doc="allow"
missing_panics_doc="allow"
module_name_repetitions="allow"

perf={ level = "warn", priority = -1 }

# restriction
if_then_some_else_none="warn"
min_ident_chars="warn"
mod_module_files="deny"
shadow_unrelated="warn"
todo="warn"

style={ level = "deny", priority = -1 }
