# SPDX-FileCopyrightText: 2024 Benedikt Bastin
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "assetinfo"
version = "0.12.0"
authors = ["Benedikt Bastin"]
edition = "2021"
description = "assetinfo is a tool to watch for versions of assets and their end-of-life date."
readme = true
homepage = "https://assetinfo.de"
repository = "https://github.com/bbastin/assetinfo"
license = "AGPL-3.0-or-later"
keywords = ["cli", "security"]
categories = ["command-line-utilities"]
build = "build.rs"
exclude = [".github", "cliff.toml", ]

[dependencies]
async-compression = { version = "0.4.12", features = ["tokio", "zstd"] }
bollard = "0.17.0"
chrono = { version = "0.4.38", features = ["now", "serde"], default-features = false }
clap = { version = "4.5.13", features = ["derive"] }
log = "0.4.22"
regex = { version = "1.10.6", features = ["std", "perf"], default-features = false }
reqwest = { version = "0.12.5", features = ["default-tls", "json"], default-features = false }
serde = { version = "1.0.205", default-features = false }
serde_json = "1.0.122"
sha256 = { version = "1.5.0", default-features = false }
simple_logger = { version = "5.0.0", default-features = false }
tabled = { version = "0.16.0", features = ["derive"], default-features = false }
tar = { version = "0.4.41", default-features = false }
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["fs", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.15", default-features = false }
toml = { version = "0.8.19", default-features = false, features = ["parse"] }

[dev-dependencies]
mockito = { version = "1.5.0", default-features = false }
tempfile = "3.12.0"
test-log = { version = "0.2.16", default-features = false }

[build-dependencies]
zstd = { version = "0.13.2", default-features = false }

[lints.rust]
missing_copy_implementations = "warn"
missing_debug_implementations = "allow"
missing_docs = "allow"
non_ascii_idents = "deny"
non_local_definitions = "deny"
unit_bindings = "deny"
unsafe_code = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"

[lints.clippy]
cargo={ level = "deny", priority = -1 }
multiple_crate_versions="allow"

complexity={ level = "warn", priority = -1 }

pedantic={ level = "deny", priority = -1 }
missing_errors_doc="allow"
missing_panics_doc="allow"
module_name_repetitions="allow"

perf={ level = "warn", priority = -1 }

# restriction
if_then_some_else_none="warn"
min_ident_chars="warn"
mod_module_files="deny"
shadow_unrelated="warn"
todo="warn"

style={ level = "deny", priority = -1 }
